--- a/_themes/sphinx_rtd_theme/footer.html
+++ b/_themes/sphinx_rtd_theme/footer.html
@@ -24,7 +24,7 @@
   {%- if last_updated %}
     {% trans last_updated=last_updated|e %}Last updated on {{ last_updated }}.{% endtrans %}
   {%- endif %}
-  </p>
-
+  &nbsp;&nbsp;
   {% trans %}<a href="https://www.github.com/snide/sphinx_rtd_theme">Sphinx theme</a> provided by <a href="http://readthedocs.org">Read the Docs</a>{% endtrans %}
+  </p>
 </footer>
