Add release number to docs and license.

--- a/_themes/sphinx_rtd_theme/footer.html
+++ b/_themes/sphinx_rtd_theme/footer.html
@@ -16,7 +16,7 @@
     &copy; Copyright 2013,
     <a href="https://scalability.llnl.gov/">Lawrence Livermore National Laboratory</a>.
     <br/>
-    Written by Todd Gamblin, <a href="mailto:tgamblin@llnl.gov">tgamblin@llnl.gov</a>
+    Written by Todd Gamblin, <a href="mailto:tgamblin@llnl.gov">tgamblin@llnl.gov</a>, LLNL-CODE-647188
     <br/>
 
   {%- if last_updated %}
