Update documentation to add an auto-generated list of packages.

--- a/_themes/sphinx_rtd_theme/footer.html
+++ b/_themes/sphinx_rtd_theme/footer.html
@@ -13,7 +13,7 @@
   <hr/>
 
   <p>
-    &copy; Copyright 2013,
+    &copy; Copyright 2013-2014,
     <a href="https://scalability.llnl.gov/">Lawrence Livermore National Laboratory</a>.
     <br/>
     Written by Todd Gamblin, <a href="mailto:tgamblin@llnl.gov">tgamblin@llnl.gov</a>, LLNL-CODE-647188
