--- a/_themes/sphinx_rtd_theme/footer.html
+++ b/_themes/sphinx_rtd_theme/footer.html
@@ -22,7 +22,12 @@
       {%- endif %}
     {%- endif %}
 
+    <br/>
+    Written by Todd Gamblin (<a href="mailto:tgamblin@llnl.gov">tgamblin@llnl.gov</a>) and
+    many contributors. LLNL-CODE-647188.
+
     {%- if last_updated %}
+      <br/>
       {% trans last_updated=last_updated|e %}Last updated on {{ last_updated }}.{% endtrans %}
     {%- endif %}
     </p>
@@ -33,4 +38,3 @@
   {%- endif %}
 
 </footer>
-
